--- a/view_company.html
+++ b/view_company.html
@@ -22,7 +22,7 @@
                 JobHunt.</a>
             
                 <nav class="navbar">
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="about.html">About us</a>
                     <a href="jobs.html">all jobs</a>
                     <a href="contact.html">contact us</a>
@@ -197,7 +197,7 @@
 
             <div class="box">
                 <h3>quick links</h3>
-                <a href="home.html"><i class="fa-solid fa-angle-right"></i>HOME</a>
+                <a href="index.html"><i class="fa-solid fa-angle-right"></i>HOME</a>
                 <a href="about.html"><i class="fa-solid fa-angle-right"></i>about</a>
                 <a href="jobs.html"><i class="fa-solid fa-angle-right"></i>all jobs</a>
                 <a href="contact.html"><i class="fa-solid fa-angle-right"></i>contact us </a>
